--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,29 +1,24 @@
-# Docker
-# Build a Docker image
-# https://docs.microsoft.com/azure/devops/pipelines/languages/docker
+ trigger:
+    branches:
+       include:
+         - main
 
-trigger:
-- master
+ pool:
+   vmImage: 'ubuntu-latest'
 
-resources:
-- repo: self
+ variables:
+   - group: 'variable-group-name' //defined in particular area to reuse to all release piplines
 
-variables:
-  tag: '$(Build.BuildId)'
-
-stages:
-- stage: Build
-  displayName: Build image
-  jobs:
-  - job: Build
-    displayName: Build
-    pool:
-      vmImage: ubuntu-latest
-    steps:
-    - task: Docker@2
-      displayName: Build an image
-      inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-        tags: |
-          $(tag)
+ steps:
+   - task: MavenAuthenticate@0
+     displayName: 'Maven authenticate'
+     inputs:
+        mavenAuthenticateFeed: 'your-maven-feed-name'
+  
+   - task: Maven@3
+     displayName: 'Maven build'
+     inputs:
+        mavenPomFile: 'pom.xml'
+        goals: 'package'
+        options: '-DskipTests=true'
+        publishJUnitResults: false
