--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,3 +15,8 @@ steps:
         goals: 'package'
         options: '-DskipTests=true'
         publishJUnitResults: false
+   - task: PublishBuildArtifacts@1
+     inputs:
+       PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+       ArtifactName: 'drop'
+       publishLocation: 'Container'
