--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,12 +8,14 @@ steps:
     - task: Maven@4
       inputs:
         mavenPomFile: 'pom.xml'
-        publishJUnitResults: true
+        goals: 'clean install'
+        publishJUnitResults: false
         javaHomeOption: 'JDKVersion'
         mavenVersionOption: 'Default'
         mavenAuthenticateFeed: false
         effectivePomSkip: false
         sonarQubeRunAnalysis: false
+        
     
   #  - task: PublishBuildArtifacts@1
   #    inputs:
