--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,16 +5,13 @@ trigger:
 pool:
    vmImage: 'ubuntu-latest'
 steps:
-    - task: Maven@4
+    - task: Maven@3
+      displayName: 'Maven build'
       inputs:
         mavenPomFile: 'pom.xml'
         goals: 'clean install'
-        publishJUnitResults: false
-        javaHomeOption: 'JDKVersion'
-        mavenVersionOption: 'Default'
-        mavenAuthenticateFeed: false
-        effectivePomSkip: false
-        sonarQubeRunAnalysis: false
+        publishJUnitResults: true
+        testResultsFiles: '**/surefire-reports/TEST-*.xml'
         
     
   #  - task: PublishBuildArtifacts@1
